examples/positive/L3/global_var_proc.ob
MODULE GlobalVarProc;

VAR x: INTEGER;

PROCEDURE FOO;
  BEGIN
    x := 42;
  END FOO;
BEGIN
  x := 0;
  Write(x); WriteLn;
  FOO;
  Write(x); WriteLn;
END GlobalVarProc.
