examples/negative/type_errors/L1/8_non_boolean_if.ob
MODULE NonBooleanIf;

VAR x: INTEGER;
    ok: INTEGER;

BEGIN
  x := 13;
  IF x THEN ok := 42
  END
END NonBooleanIf.
